added list style

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <main>
         <div id="app">
-            <ul>
-                <li v-for="email in emailsList">
-                    {{ email }}
-                </li>
-            </ul>
+            <h1>Randomly Generated Emails' List</h1>
+                <ul>
+                    <li v-for="email in emailsList">
+                        {{ email }}
+                    </li>
+                </ul>
         </div>
     </main>
     
